<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".ui.task.TaskFragment">


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_et"
        android:hint="@string/et_title"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_et"
        android:hint="@string/et_desc"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:cornerRadius="16dp" />

</LinearLayout>