<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_telegram" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_otp_verification"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tv_otp_send"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/tv_enter_Mnumber"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/tv_phone_number"
            android:textColor="@color/orange"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:endIconMode="clear_text"
            app:prefixText="+996"
            app:prefixTextColor="@color/orange"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/btn_send_otp"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:cornerRadius="16dp" />


        <ProgressBar
            android:id="@+id/pro_bar_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/orange"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>