<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/OTPFragment_container"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_otp_verification"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/et_sent_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_code1"
                style="@style/etInputOTP" />

            <EditText
                android:id="@+id/et_input_code2"
                style="@style/etInputOTP" />

            <EditText
                android:id="@+id/et_input_code3"
                style="@style/etInputOTP" />

            <EditText
                android:id="@+id/et_input_code4"
                style="@style/etInputOTP" />

            <EditText
                android:id="@+id/et_input_code5"
                style="@style/etInputOTP" />

            <EditText
                android:id="@+id/et_input_code6"
                style="@style/etInputOTP" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_don_t_receive_code"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_send_code_again"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tv_send_code_again"/>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/orange"
            android:text="@string/btn_send_otp"
            android:textSize="28sp"
            app:cornerRadius="8dp" />

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_in"
            android:indeterminateTint="@color/orange"
            android:visibility="gone"
            android:id="@+id/pro_bar_2"/>
    </LinearLayout>


</LinearLayout>